spacing fix on bps-home

--- a/nps-home/css/nps-home.css
+++ b/nps-home/css/nps-home.css
@@ -149,7 +149,7 @@
 }
 @media (min-width:992px) {
     .news-events-ad {
-        margin: 25px 0 0 10px;
+        margin: 0 0 0 10px;
     }
 }
 
